# titan-aio

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.hf  Dockerfile.prod  README.md  ROADMAP.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml  fibo.py  kaggle-notebook-template.py  progress.md  pyproject.toml  requirements.hf.txt  run.sh  setup_hf.sh  test.db  url.txt
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  keepalive.yml
.kaggle_notebooks/: titan_image_worker.py
.kaggle_notebooks_video/: titan_video_worker.py
.titan/: AGENT_SPECS.md  ARCHITECTURE.md  AUTONOMOUS_MODE.md  CLAUDE.md  DATABASE_SPECS.md  DEPLOYMENT_PLAN.md  DEVELOPMENT_RULES.md  MCP_SPECS.md  PROJECT_STATUS.md  ROADMAP.md  TESTING_RULES.md  WORKER_SPECS.md
AGENTS/: analytics.md  antishadowban.md  avatar.md  ceo.md  competitor.md  creative.md  finance.md  growth.md  knowledge.md  memory.md  offer.md  product.md  publisher.md  review.md  trend.md  ugc.md  video.md
Database/: __init__.py  connection.py  repository.py
Database/models/: __init__.py
Docs/: README.md
HFSpaces/browser_scraper/: app.py  requirements.txt
MCP/: __init__.py  instance.py  proxy.py  server.py  standalone.py
MCP/schemas/: __init__.py
MCP/tools/: __init__.py  ab_tools.py  advanced_tools.py  affiliate_optimizer_tools.py  analyze_competitors.py  audit_tools.py  (+64 more)
Services/: __init__.py  autonomous_pipeline.py  competitor_monitor.py  graph_workflow.py  hf_client.py  llm.py  orchestrator.py  scheduler.py  video_editor.py
Tests/: __init__.py  benchmark.py  benchmarks.json  conftest.py  notion_api_check.py  test_agents.py  test_batch4_features.py  test_db_persistence.py  test_finance_growth_memory.py  test_hf_integration.py  test_imports.py  test_integration.py  test_integration_features.py  test_mcp_tools.py  test_mongodb.py  test_notion.py  test_overkill_features.py  test_phase2_tools.py  test_pipeline.py  test_power_features.py  test_schemas.py  test_video_avatar_tools.py  test_video_pipeline.py  test_workers.py  test_zernio.py
Workers/: __init__.py  flux_t4.py  image_worker.py  kaggle_deploy.py  kaggle_image_notebook.py  kaggle_lora_notebook.py  kaggle_master.py  kaggle_setup.py  kaggle_video.py  lora_worker.py  modal_a100.py  modal_image.py  router.py  video_worker.py  wan_t4.py
data/: titan.db
scripts/: deploy_hf_full.sh  deploy_modal.py  deploy_production.sh  keepalive.py  keepalive.sh  seed_data.py  titan-keepalive.service
titan/: __init__.py  agents.yaml  autonomous_loop.py  autonomous_loop.py.bak  config.py  launch.py  main.py  websocket_server.py
(+147 files in other folders)
