[project]
name = "titan-aio"
version = "0.1.0"
description = "Autonomous Affiliate Intelligence Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.5",
    "langgraph>=0.2.21",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "fastmcp>=0.4.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "google-genai>=2.0.0",
    "protobuf>=5.0.0",
    "Pillow>=10.0.0",
    "pymongo>=4.7.0",
    "motor>=3.5.0",
    "notion-client>=2.2.0",
    "edge-tts>=6.1.9",
]

[project.optional-dependencies]
gpu = [
    "diffusers>=0.30.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "opencv-python>=4.9.0",
    "sentencepiece>=0.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["titan*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["migrations/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["Tests"]
